# grpc_test

./: .gitignore  CMakeLists.txt  README.md
fb/fb_files/: hello.fbs
fb/gen_fb/: hello.grpc.fb.cc  hello.grpc.fb.h  hello_generated.h
proto/: CMakeLists.txt
proto/gen_pb/: helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  logs.grpc.pb.cc  logs.grpc.pb.h  logs.pb.cc  logs.pb.h
proto/proto_files/: helloworld.proto  logs.proto
src/client/: CMakeLists.txt  LogsClient.cpp  client_main.cpp
src/fb_grpc_demo/: CMakeLists.txt  fb_grpc_client.cpp  fb_grpc_server.cpp
src/server/: CMakeLists.txt  LogsServer.cpp  server_main.cpp
